Games/tic-tac-toe/v2/style2.css
@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");

body {
  background-color: #000000;
  font-family: "Handlee", cursive;
}
nav {
  font-family: Arial;
}
.marker0,
.marker1 {
  font-size: 2.5em;
}
.clicked {
  background-color: rgb(0, 255, 34);
}

.hidden {
  display: none;
}

.player1 {
  background-color: rgb(70, 37, 255);
}
.player0 {
  background-color: rgb(82, 175, 252);
}

.winner {
  width: 100%;
  text-align: center;
  display: block;
  height: 50px;
  font-size: 25px;
  font-weight: 100;
}

.btn-xl {
  height: 100%;
  width: 100%;
  /* padding: 20px 20px; */
  font-size: 30px;
  line-height: normal;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
}

.rounded {
  height: 300px;
  width: 400px;
  margin-bottom: 20px;
  box-shadow: 10px -10px 300px rgb(255, 243, 70);
}

/* .board {
  box-shadow: 0px 0px 300px rgb(255, 243, 70);
} */
@media (max-width: 768px) {
  .btn-xl {
    padding: 12px 15px;
    font-size: 25px;
  }
  .rounded {
    height: 200px;
    width: 300px;
  }
}

